# Stalinra1n-Jailbreak-a12-a13-devices-usblitter8

./: README.md
stalinra1n/: README.md  __main__.py  pyproject.toml  requirements.txt
stalinra1n/cli/: main.py  tui.py
stalinra1n/core/: exploit.py  payload.py
stalinra1n/core/jailbreak/: bootstrap.py  deploy.py  ramdisk.py
stalinra1n/device/: README.md
stalinra1n/device/loader/: Info.plist  LoaderApp.swift  Package.swift  README.md
stalinra1n/device/scripts/: build_bootstrap.sh  build_loader.sh  jailbreak.sh
stalinra1n/gui/: app.py
stalinra1n/scripts/: install.sh
stalinra1n/stalinra1n.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stalinra1n/stalinra1n/cli/: main.py  tui.py
stalinra1n/stalinra1n/core/: board.py  device.py  exploit.py  splash.py
stalinra1n/stalinra1n/core/jailbreak/: __init__.py  bootstrap.py  iboot.py
stalinra1n/stalinra1n/gui/: app.py
stalinra1n/stalinra1n/utils/: log.py
