[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stalinra1n"
version = "1.0.0"
description = "A12/A13 BootROM exploit + jailbreak tool (stalinra1n)"
readme = "README.md"
authors = [
    { name = "stalinra1n contributors" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyusb>=1.2.0",
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
cli = [
    "rich>=13.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/prdgmshift/usbliter8"
Source = "https://github.com/prdgmshift/usbliter8"

[project.scripts]
stalinra1n = "stalinra1n.cli.main:main"
stalinra1n-gui = "stalinra1n.gui.app:main"

[tool.setuptools.packages.find]
include = ["stalinra1n*"]
